fdo#46434: No need to turn arguments into absolute file URLs when sending

...as the receiving side already takes care of that (using the cwd that is sent first).